Basic components added: scores, smilies, etc

--- a/index.html
+++ b/index.html
@@ -18,6 +18,28 @@
       <h1>Welcome to my Sandbox!</h1>
     </header>
     
+    <div class="score-board">
+      <div id="user-label" class="badge">user</div>
+      <div id="computer-label" class="badge">user</div>
+      <div id="user-score">0</span>:<span id="computer-score">0</span>
+    </div>
+    
+    <div class="result">
+      <p>Eat healthy and be well! :)</p>
+    </div>
+   
+    <div class="choices">
+      <div class="choice">
+	<img src="smilies/happy.png" alt="">
+      </div> 
+      <div class="choice">
+	<img src="smilies/semi-happy.png" alt="">
+      </div> 
+      <div class="choice">
+	<img src="smilies/unhappy.png" alt="">
+      </div> 
+    </div> 
+
   </body>
 
 </html>
