--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <div class="score-board">
       <div id="user-label" class="badge">user</div>
-      <div id="computer-label" class="badge">user</div>
+      <div id="computer-label" class="badge">bot</div>
       <div id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
     
