Components for reciprocal guess now available

--- a/index.html
+++ b/index.html
@@ -20,25 +20,42 @@
     
     <div class="score-board">
       <div id="user-label" class="badge">user</div>
-      <div id="computer-label" class="badge">bot</div>
-      <div id="user-score">0</span>:<span id="computer-score">0</span>
+      <div id="bot-label" class="badge">bot</div>
+      <div id="user-score">0</span>:<span id="bot-score">0</span>
     </div>
     
     <div class="result">
       <p>Eat healthy and be well! :)</p>
     </div>
    
+    <!Images derived/edited from: https://cdn2.vectorstock.com/i/thumb-large/16/86/red-yellow-and-green-smileys-vector-26631686.jpg >
     <div class="choices">
-      <div class="choice">
+      <div class="choice" id="g">
 	<img src="smilies/happy.png" alt="">
       </div> 
-      <div class="choice">
+      <div class="choice" id="y">
 	<img src="smilies/semi-happy.png" alt="">
       </div> 
-      <div class="choice">
+      <div class="choice" id="r">
 	<img src="smilies/unhappy.png" alt="">
       </div> 
     </div> 
+
+    <p id="action-message">How do you feel?</p>
+
+    <div class="choices">
+      <div class="choice" id="g">
+	<img src="smilies/happy_sq.png" alt="">
+      </div> 
+      <div class="choice" id="y">
+	<img src="smilies/semi-happy_sq.png" alt="">
+      </div> 
+      <div class="choice" id="r">
+	<img src="smilies/unhappy_sq.png" alt="">
+      </div> 
+    </div> 
+
+    <p id="action-message">Your thoughts on how I feel?</p>
 
   </body>
 
