Linked css file to html: change bckgrnd color, etc

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sandbox Chatbot</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   
   <body>
