Formatted the heading and working on body

--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
     </div>
    
     <!Images derived/edited from: https://cdn2.vectorstock.com/i/thumb-large/16/86/red-yellow-and-green-smileys-vector-26631686.jpg >
-    <div class="choices">
-      <div class="choice" id="g">
+    <div class="choices-1">
+      <div class="choice-1" id="g1">
 	<img src="smilies/happy.png" alt="">
       </div> 
-      <div class="choice" id="y">
+      <div class="choice" id="y1">
 	<img src="smilies/semi-happy.png" alt="">
       </div> 
-      <div class="choice" id="r">
+      <div class="choice" id="r1">
 	<img src="smilies/unhappy.png" alt="">
       </div> 
     </div> 
 
     <p id="action-message">How do you feel?</p>
 
-    <div class="choices">
-      <div class="choice" id="g">
+    <div class="choices-2">
+      <div class="choice-2" id="g2">
 	<img src="smilies/happy_sq.png" alt="">
       </div> 
-      <div class="choice" id="y">
+      <div class="choice" id="y2">
 	<img src="smilies/semi-happy_sq.png" alt="">
       </div> 
-      <div class="choice" id="r">
+      <div class="choice" id="r2">
 	<img src="smilies/unhappy_sq.png" alt="">
       </div> 
     </div> 
