Formatted scoreboard - position hardcoded

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <! Objective: Create a prototype chatbot that responds to user input. The user and chatbot can guess each other's mood: guessing correctly earns one point and incorrect guesses will grant the point to the opponent.>
 
 
+<!Reference: Code is modified from Youtube video called, "Web Development Tutorial - JavaScript, HTML, CSS - Rock Paper Scissors Game" by freeCodeCamp.org>
+
+
 <!DOCTYPE html>
 <html>
 
@@ -22,14 +25,14 @@
     <div class="score-board">
       <div id="user-label" class="badge">user</div>
       <div id="bot-label" class="badge">bot</div>
-      <div id="user-score">0</span>:<span id="bot-score">0</span>
+      <span id="user-score">0</span>:<span id="bot-score">0</span>
     </div>
     
-    <div class="result">
+    <div class="feedback">
       <p>Eat healthy and be well! :)</p>
     </div>
    
-    <!Images derived/edited from: https://cdn2.vectorstock.com/i/thumb-large/16/86/red-yellow-and-green-smileys-vector-26631686.jpg >
+    <!Reference: Images modified from https://cdn2.vectorstock.com/i/thumb-large/16/86/red-yellow-and-green-smileys-vector-26631686.jpg >
     <div class="choices-1">
       <div class="choice-1" id="g1">
 	<img src="smilies/happy.png" alt="">
