Formatted choices, prompts, hover

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <div class="choice-1" id="g1">
 	<img src="smilies/happy.png" alt="">
       </div> 
-      <div class="choice" id="y1">
+      <div class="choice-1" id="y1">
 	<img src="smilies/semi-happy.png" alt="">
       </div> 
-      <div class="choice" id="r1">
+      <div class="choice-1" id="r1">
 	<img src="smilies/unhappy.png" alt="">
       </div> 
     </div> 
@@ -51,10 +51,10 @@
       <div class="choice-2" id="g2">
 	<img src="smilies/happy_sq.png" alt="">
       </div> 
-      <div class="choice" id="y2">
+      <div class="choice-2" id="y2">
 	<img src="smilies/semi-happy_sq.png" alt="">
       </div> 
-      <div class="choice" id="r2">
+      <div class="choice-2" id="r2">
 	<img src="smilies/unhappy_sq.png" alt="">
       </div> 
     </div> 
