Linked JS to html and confirm it's working

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 
     <p id="action-message">Your thoughts on how I feel?</p>
 
+    <script src="app.js" charset="utf-8"></script>
+
   </body>
 
 </html>
