--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div> 
     </div> 
 
-    <p id="action-message">How do you feel?</p>
+    <p id="action-message1">How do you feel?</p>
 
     <div class="choices-2">
       <div class="choice-2" id="g2">
@@ -59,7 +59,7 @@
       </div> 
     </div> 
 
-    <p id="action-message">Your thoughts on how I feel?</p>
+    <p id="action-message2">Your thoughts on how I feel?</p>
 
     <script src="app.js" charset="utf-8"></script>
 
